--- a/test-file.html
+++ b/test-file.html
@@ -6,6 +6,6 @@
     <title>Просто тестовый файл</title>
 </head>
 <body style = "background-color: #5c5c5ccb">
-    <h1 style = "text-align: center; color: #fff"> И снова привет Git</h1>
+    <h1 style = "text-align: center; color: #fff"> Привет Git из ветки conflict-branch</h1>
 </body>
 </html>
